# ufc

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  libufc.pc.in
.github/workflows/: cmake.yml
data/serial/: overhead.yaml
data/usbhid/: geekprojects_overhead.yaml  geekprojects_radio.yaml  winwing_fcu.yaml
data/x-plane/: defaults.yaml
data/x-plane/aircraft/: felis_b742.yaml  ff_777v2.yaml  laminar_a330.yaml  toliss.yaml  toliss_a321.yaml  xcrafts_ejets.yaml
include/ufc/: aircraftmapping.h  aircraftstate.h  airports.h  bitbuffer.h  commands.h  data.h  datasource.h  device.h  flightconnector.h  geoutils.h  logger.h  lua.h  navaids.h  navdata.h  udp.h  usbhidconfig.h  usbhiddevice.h  utils.h
include/ufc/data/: airports.h  airways.h  flightplan.h  fpformat.h  greatcircle.h  lnmnavdata.h  msfsiniformat.h  navaids.h  navdata.h  procedures.h  routeparser.h  routetextformat.h  simbriefjson.h  xplanefmsformat.h  xplanenavdata.h
include/ufc/devices/: device.h  usbhiddevice.h
include/ufc/utils/: data.h  database.h  geoutils.h  udp.h  utils.h
src/: display.cpp  display.h  gfxutils.cpp  gfxutils.h  main.cpp  state.cpp  state.h  xplane.cpp  xplane.h
src/datasources/: datasource.h  xplane.cpp  xplane.h  xplaneclient.cpp  xplaneclient.h
src/libufc/: aircraftstate.cpp  airport.cpp  data.cpp  datadefs.h  flightconnector.cpp  geoutils.cpp  logger.cpp  lua.cpp  lua.h  utf8.h  utils.cpp
src/libufc-connector/: aircraftstate.cpp  flightconnector.cpp  lua.cpp  lua.h
src/libufc-connector/datasources/: aircraftmapping.cpp  clock.cpp  clock.h  datasource.cpp  simulator.cpp
src/libufc-connector/datasources/xplane/: xplane.cpp  xplane.h  xplaneclient.cpp  xplaneclient.h  xplaneudpclient.cpp  xplaneudpclient.h  xplanewsclient.cpp  xplanewsclient.h
src/libufc-connector/devices/: consoleoutput.cpp  consoleoutput.h  device.cpp  usbhiddevice.cpp
src/libufc-connector/devices/serial/: device.cpp  serial.h  serialmanager.cpp  serialport.h
src/libufc-connector/devices/serial/lib/: list_ports_linux.cpp  serial.cpp
src/libufc-connector/devices/usbhidconfig/: device.cpp  usbhidconfig.h
src/libufc-data/: greatcircle.cpp  routeparser.cpp
src/libufc-data/flightplans/: fpformat.cpp  msfsiniformat.cpp  routetext.cpp  simbriefjson.cpp
src/libufc-data/navdata/: airport.cpp  procedures.cpp
src/libufc-data/navdata/littlenavmap/: lnmairports.cpp  lnmairways.cpp  lnmnavaids.cpp  lnmnavdata.cpp  lnmnavdata.h  lnmprocedures.cpp
src/libufc-data/navdata/xplane/: airports.cpp  navaids.cpp  navdata.cpp  navdata.h  xplanenavdata.cpp  xplanenavdata.h
src/libufc-utils/: bitbuffer.cpp  data.cpp  database.cpp  geoutils.cpp  logger.cpp  udp.cpp  utils.cpp
src/libufc/datasources/: aircraftmapping.cpp  clock.cpp  clock.h  datadefs.h  datasource.cpp  simulator.cpp  simulator.h
src/libufc/datasources/xplane/: datadefs.h  xplane.cpp  xplane.h  xplaneclient.cpp  xplaneclient.h  xpmapping.cpp  xpmapping.h
src/libufc/datasources/xplane/navdata/: airports.cpp  navaids.cpp  navdata.cpp  navdata.h
src/libufc/devices/: arduinotest.cpp  arduinotest.h  consoleoutput.cpp  consoleoutput.h  customhid.cpp  customhid.h  customradiohid.cpp  customradiohid.h  device.cpp  usbhiddevice.cpp  winwingfcu.cpp  winwingfcu.h
src/libufc/devices/serial/: device.cpp  serial.h  serialmanager.cpp  serialport.cpp  serialport.h
src/libufc/devices/serial/lib/: list_ports_linux.cpp  list_ports_osx.cpp  serial_unix.cpp  serial_win.cpp
src/libufc/devices/usbhidconfig/: device.cpp  lcd.h  manager.cpp  usbhidconfig.h
src/libufc/navdata/littlenavmap/: lnmnavdata.cpp  lnmnavdata.h
src/libufc/navdata/xplane/: airports.cpp  navaids.cpp  xplanenavdata.cpp  xplanenavdata.h
src/libufc/utils/: bitbuffer.cpp  data.cpp  database.cpp  geoutils.cpp  logger.cpp  udp.cpp
src/pfd/: display.cpp  display.h  gfxutils.cpp  gfxutils.h
src/pfd/widgets/: adi.cpp  adi.h  altitudeindicator.cpp  altitudeindicator.h  annunciators.cpp  annunciators.h  headingindicator.cpp  headingindicator.h  pfdwidget.cpp  pfdwidget.h  speedindicator.cpp  speedindicator.h  vsi.cpp  vsi.h  widget.cpp  widget.h
src/ufc-generate-data/: main.cpp
src/ufc-plugin/: ufcplugin.cpp  ufcplugin.h  xpplugindatasource.cpp  xpplugindatasource.h
src/ufctool/: main.cpp
src/widgets/: adi.cpp  adi.h  altitudeindicator.cpp  altitudeindicator.h  headingindicator.cpp  headingindicator.h  speedindicator.cpp  speedindicator.h  widget.h
tests/: CMakeLists.txt
tests/data/: lnmprocedures.cpp  route.cpp
